--- a/FPS Game.html
+++ b/FPS Game.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>FPS Fighting Game</title>
+    <title>FPS Fighting Game By Lalit</title>
     <style>
         /* CSS styling for the game canvas */
         #gameCanvas {
